minor issues with z-index and scroll

--- a/css/popup.css
+++ b/css/popup.css
@@ -161,7 +161,7 @@ hr.drop_shadow {
 .resultcount{
 	color: #fff;
 	text-align: center;
-	margin-bottom: 5px;
+	margin-bottom: 2px;
 }
 #result{
 	height:290px;
